syntax = "proto3";

package bfg.proto.parameters;

message Interconnect {
  optional int32 num_rows = 1;
  optional int32 num_columns = 2;
}
